[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "unitree_interface"
version = "0.0.2"
description = "A unified, robot-agnostic interface for fetching observations from Unitree and Booster platforms."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = ["unitree-sdk2py"]

[tool.uv.sources]
unitree-sdk2py = { git = "https://github.com/Kaweees/unitree_sdk2_python.git", branch = "main" }

[dependency-groups]
dev = ["pre-commit", "ipykernel"]
